--- a/#我对信息素养实践课程的认识.md
+++ b/#我对信息素养实践课程的认识.md
@@ -1,11 +1,14 @@
 [TOC]
 # 我对信息素养实践课程的认识  
+*软件7班*  **孙金山** ***2020012396***  
+
 ## 我对信息素养实践课程的认识  
 ### 熟悉使用各种软件  
-&#8195&#8195我们接触了很多实用的软件。Eg：Typora、Xind等。课程上学会这些软件的使用，课下并结合作业熟悉软件的各种操作，这给我们以后进行高效的学习工作奠定了一定的基础。  
-&#8195&#8195接触到了github与git，不仅让我们在技术上熟悉github的使用应用，更让我们初步认识到，一个好的项目，要产品经理、架构、开发、测试等人员要通力合作才能完成，这是一个团队的事情，不是单打独斗就能完成的。  
-&#8195&#8195对于Xmind，在我们的项目合中，项目管理必不可少。应用Xmind进行我们的一个项目管理，不仅能够分清工作范畴，更能提高工作效率，保障项目按期上线。  
-&#8195&#8195对于markdown文档，让我们有了一个更简洁的界面去把我们的知识去做一个分享，共同寻求一个技术上的进步。  
+&#8195;&#8195;我们接触了很多实用的软件。Eg：Typora、Xind等。课程上学会这些软件的使用，课下并结合作业熟悉软件的各种操作，这给我们以后进行高效的学习工作奠定了一定的基础。  
+&#8195;&#8195;接触到了github与git，不仅让我们在技术上熟悉github的使用应用，更让我们初步认识到，一个好的项目，要产品经理、架构、开发、测试等人员要通力合作才能完成，这是一个团队的事情，不是单打独斗就能完成的。  
+&#8195;&#8195;对于Xmind，在我们的项目合中，项目管理必不可少。应用Xmind进行我们的一个项目管理，不仅能够分清工作范畴，更能提高工作效率，保障项目按期上线。  
+&#8195;&#8195;对于markdown文档，让我们有了一个更简洁的界面去把我们的知识去做一个分享，共同寻求一个技术上的进步。  
+
 ## 文字设置  
 *软件7班*  **孙金山** ***2020012396***  
 ## 信息素养课件表格  
@@ -39,13 +42,14 @@ else:
 
 ## 友情链接  
 ### 搜索引擎  
-![百度][www.baidu.com]  
-![搜狗][https://www.sogou.com/]  
-![必应][https://cn.bing.com/]  
+[百度](www.baidu.com)  
+[搜狗](https://www.sogou.com/]) 
+[必应](https://cn.bing.com/)  
+
 ### 学校  
-![河北师范大学][http://www.hebtu.edu.cn/]  
-![河北师范大学教务处][http://jwc.hebtu.edu.cn/]  
-![河北师范大学软件学院][http://software.hebtu.edu.cn/]  
+[河北师范大学](http://www.hebtu.edu.cn/)  
+[河北师范大学教务处](http://jwc.hebtu.edu.cn/)  
+[河北师范大学软件学院](http://software.hebtu.edu.cn/)  
 
 ## 有序列表与无序列表  
 ### 有序列表  
